ajustes swagger e laboratory
