# public/swagger/swagger.json
@@ -23,6 +23,9 @@
                 "security": [
                     {
                         "bearerToken": []
+                    },
+                    {
+                        "api_key": []
                     }
                 ]
             }
@@ -94,7 +97,13 @@
                 },
                 "security": [
                     {
-                        "bearerToken": []
+                        "bearerToken": [],
+                        "0": {
+                            "api_key": []
+                        }
+                    },
+                    {
+                        "api_key": []
                     }
                 ]
             }
@@ -122,6 +131,9 @@
                 "security": [
                     {
                         "bearerToken": []
+                    },
+                    {
+                        "api_key": []
                     }
                 ]
             },
@@ -204,6 +216,9 @@
                 "security": [
                     {
                         "bearerToken": []
+                    },
+                    {
+                        "api_key": []
                     }
                 ]
             },
@@ -232,6 +247,9 @@
                 "security": [
                     {
                         "bearerToken": []
+                    },
+                    {
+                        "api_key": []
                     }
                 ]
             }
@@ -251,6 +269,9 @@
                 "security": [
                     {
                         "bearerToken": []
+                    },
+                    {
+                        "api_key": []
                     }
                 ]
             }
@@ -270,6 +291,9 @@
                 "security": [
                     {
                         "bearerToken": []
+                    },
+                    {
+                        "api_key": []
                     }
                 ]
             }
@@ -346,6 +370,9 @@
                 "security": [
                     {
                         "bearerToken": []
+                    },
+                    {
+                        "api_key": []
                     }
                 ]
             }
@@ -421,6 +448,9 @@
                 "security": [
                     {
                         "bearerToken": []
+                    },
+                    {
+                        "api_key": []
                     }
                 ]
             }
@@ -440,6 +470,9 @@
                 "security": [
                     {
                         "bearerToken": []
+                    },
+                    {
+                        "api_key": []
                     }
                 ]
             }
@@ -515,6 +548,9 @@
                 "security": [
                     {
                         "bearerToken": []
+                    },
+                    {
+                        "api_key": []
                     }
                 ]
             }
@@ -542,6 +578,9 @@
                 "security": [
                     {
                         "bearerToken": []
+                    },
+                    {
+                        "api_key": []
                     }
                 ]
             }
@@ -569,6 +608,9 @@
                 "security": [
                     {
                         "bearerToken": []
+                    },
+                    {
+                        "api_key": []
                     }
                 ]
             }
@@ -750,6 +792,9 @@
                 "security": [
                     {
                         "bearerToken": []
+                    },
+                    {
+                        "api_key": []
                     }
                 ]
             }
@@ -759,11 +804,17 @@
         "securitySchemes": {
             "bearerToken": {
                 "type": "http",
-                "description": "Acess token obtido na autenticação",
+                "description": "Access token obtido na autenticação",
                 "name": "Authorization",
                 "in": "header",
                 "bearerFormat": "JWT",
                 "scheme": "bearer"
+            },
+            "api_key": {
+                "type": "apiKey",
+                "description": "Chave de aplicação para autenticação na API",
+                "name": "X-Application-Key",
+                "in": "header"
             }
         }
     }
